"""QNX Build System - Bazel Module"""

module(
    name = "qnx",
    version = "1.0.0",
)

# Bazel built-in dependencies
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# QNX SDP repository setup
qnx_sdp_ext = use_extension("//qnx_sdp:extensions.bzl", "qnx_sdp_ext")
use_repo(qnx_sdp_ext, "qnx_sdp")

# Register QNX toolchains
register_toolchains(
    "//bazel/toolchains:toolchain_qnx_x86_64",
)
