"""QNX Build System - Bazel Module"""

module(
    name = "qnx",
    version = "1.0.0",
)

# Bazel built-in dependencies
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# QNX SDP dependency

bazel_dep(name = "score_toolchains_qnx", version = "0.0.3")
local_path_override(
    module_name = "score_toolchains_qnx",
    path = "./toolchains_qnx_local",
)

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx")
toolchains_qnx.sdp(
    sha256 = "2fadca6ca59c674681774fe47d3adf5805a2d918fe2396443c7157966dcd3b6a",
    strip_prefix = "qnx800",
    url = "file:///home/qnx/qnx800.tar.gz",
)

use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")

register_toolchains("@toolchains_qnx_qcc//:qcc_x86_64", "@toolchains_qnx_qcc//:qcc_aarch64")
register_toolchains("@toolchains_qnx_ifs//:ifs_x86_64", "@toolchains_qnx_ifs//:ifs_aarch64")
